refactor: 대기 서비스가 WaitingWithTurn 반환하고 컨트롤러에서 변환